Added alpha and k to rising stage

--- a/DandelionOptimizer.ipynb
+++ b/DandelionOptimizer.ipynb
@@ -2346,18 +2346,26 @@
     "\n",
     "        ## Rising stage\n",
     "        # beta = randn(Popsize, Dim)\n",
-    "        # alpha = rand() * ((1 / Maxiteration^2) * t^2 - 2 / Maxiteration * t + 1)  # eq.(8) in this paper\n",
+    "        alpha = rand() * ((1 / Maxiteration^2) * t^2 - 2 / Maxiteration * t + 1)  # eq.(8) in this paper\n",
     "        # a = 1 / (Maxiteration^2 - 2 * Maxiteration + 1)  # Note: U can use positive or negative on 1 for solving ur problem.\n",
     "        # b = -2a\n",
     "        # c = 1 - a - b\n",
-    "        # k = 1 - rand() * (c + a * t^2 + b * t)  # eq.(11) in this paper\n",
+    "        k = 1 - rand() * (c + a * t^2 + b * t)  # eq.(11) in this paper\n",
     "        if randn() < 1.5\n",
     "            for i in 1:Popsize\n",
-    "                dandelions[i], dandelionsFitness[i] = three_opt_tsp(d, dandelions[i])\n",
+    "                if alpha >= 0.5\n",
+    "                    dandelions[i], dandelionsFitness[i] = three_opt_tsp(d, dandelions[i])\n",
+    "                else\n",
+    "                    dandelions[i], dandelionsFitness[i] = two_opt_tsp(d, dandelions[i])\n",
+    "                end\n",
     "            end\n",
     "        else\n",
     "            for i in 1:Popsize\n",
-    "                dandelions[i], dandelionsFitness[i] = two_opt_tsp(d, dandelions[i])\n",
+    "                if k <= 0.5\n",
+    "                    dandelions[i], dandelionsFitness[i] = three_opt_tsp(d, dandelions[i])\n",
+    "                else\n",
+    "                    dandelions[i], dandelionsFitness[i] = two_opt_tsp(d, dandelions[i])\n",
+    "                end\n",
     "            end\n",
     "        end\n",
     "\n",
