Updated Descending stage

--- a/DandelionOptimizer.ipynb
+++ b/DandelionOptimizer.ipynb
@@ -2278,12 +2278,6 @@
     "    v = rand(Normal(0, 1))\n",
     "    z = u / (abs(v)^(1 / beta))\n",
     "    return z\n",
-    "end\n",
-    "\n",
-    "if levy_single(1.5) > 0\n",
-    "\n",
-    "else\n",
-    "\n",
     "end"
    ]
   },
@@ -2345,7 +2339,7 @@
     "        # dandelions_1 = zeros(Popsize, Dim)\n",
     "\n",
     "        ## Rising stage\n",
-    "        # beta = randn(Popsize, Dim)\n",
+    "        beta = randn(Popsize, Dim)\n",
     "        alpha = rand() * ((1 / Maxiteration^2) * t^2 - 2 / Maxiteration * t + 1)  # eq.(8) in this paper\n",
     "        # a = 1 / (Maxiteration^2 - 2 * Maxiteration + 1)  # Note: U can use positive or negative on 1 for solving ur problem.\n",
     "        # b = -2a\n",
@@ -2370,17 +2364,20 @@
     "        end\n",
     "\n",
     "        ## Decline stage\n",
-    "        dandelions_mean = sum(dandelions, dims=1) / Popsize  # eq.(14) in this paper\n",
-    "        dandelions_2 = similar(dandelions)  # Preallocate dandelions_2 array\n",
+    "        # dandelions_mean = sum(dandelions, dims=1) / Popsize  # eq.(14) in this paper\n",
+    "        # dandelions_2 = similar(dandelions)  # Preallocate dandelions_2 array\n",
     "        for i in 1:Popsize\n",
     "            for j in 1:Dim\n",
-    "                dandelions_2[i, j] = dandelions[i, j] - beta[i, j] * alpha * (dandelions_mean[1, j] - beta[i, j] * alpha * dandelions[i, j])  # eq.(13) in this paper\n",
-    "            end\n",
+    "\t\t\t\tif abs(alpha * beta[i, j]) > 1.5\n",
+    "\t\t\t\t\tx, y = rand(1:length(dandelions[i])), rand(1:length(dandelions[i]))\n",
+    "\t\t\t\t\tdandelions[x], dandelions[y] = dandelions[y], dandelions[x]\n",
+    "\t\t\t\tend\n",
+    "\t\t\tend\n",
     "        end\n",
-    "        dandelions .= dandelions_2\n",
-    "        # Check boundaries\n",
-    "        dandelions .= max.(dandelions, LB')\n",
-    "        dandelions .= min.(dandelions, UB')\n",
+    "        # dandelions .= dandelions_2\n",
+    "        # # Check boundaries\n",
+    "        # dandelions .= max.(dandelions, LB')\n",
+    "        # dandelions .= min.(dandelions, UB')\n",
     "\n",
     "        ## Landing stage\n",
     "        if levy_single(1.5) > 0\n",
@@ -2393,13 +2390,13 @@
     "        \tend\n",
     "        end\n",
     "\n",
-    "        # Check boundaries\n",
-    "        dandelions = max.(dandelions, LB')  # Adjusted to update dandelions_3 directly\n",
-    "        dandelions = min.(dandelions, UB')\n",
+    "        # # Check boundaries\n",
+    "        # dandelions = max.(dandelions, LB')  # Adjusted to update dandelions_3 directly\n",
+    "        # dandelions = min.(dandelions, UB')\n",
     "\n",
     "        # Calculate fitness values\n",
     "        for i in 1:Popsize\n",
-    "            dandelionsFitness[i] = Fobj(dandelions[i, :])\n",
+    "            dandelionsFitness[i] = tour_cost(d, dandelions[i])\n",
     "        end\n",
     "\n",
     "        sorted_indexes = sortperm(dandelionsFitness)\n",
