--- a/DandelionOptimizer.ipynb
+++ b/DandelionOptimizer.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,9 @@
     "using Plots\n",
     "using DataFrames\n",
     "using HardTestProblems\n",
-    "using Printf"
+    "using Printf\n",
+    "using Luxor\n",
+    "using Distances"
    ]
   },
   {
@@ -2133,7 +2135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2160,7 +2162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2214,7 +2216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2265,9 +2267,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "levy_single (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Landing stage combine it later with the code\n",
     "function levy_single(beta)\n",
@@ -2283,24 +2295,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "initialization (generic function with 1 method)"
+       "initialization_tsp (generic function with 1 method)"
       ]
      },
-     "execution_count": 9,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
     "function initialization_tsp(cities, d, Popsize, Dim)\n",
-    "    d=pairwise(Euclidean(), cities, dims=2)\n",
-    "    \n",
     "    tours = []\n",
     "    costs = []\n",
     "    for i in 1:Popsize\n",
@@ -2317,13 +2326,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DO_tsp (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "function DO_tsp(Popsize, Maxiteration, Dim, cities)\n",
     "    start_time = time()\n",
-    "    d=pairwise(Euclidean(), cities, dims=2)\n",
+    "\tcoordinates = rand(2,cities) \n",
+    "    d=pairwise(Euclidean(), coordinates, dims=2)\n",
     "    dandelions, dandelionsFitness = initialization_tsp(cities, d, Popsize, Dim)\n",
     "    Convergence_curve = zeros(Maxiteration)\n",
     "\n",
@@ -2341,9 +2361,9 @@
     "        ## Rising stage\n",
     "        beta = randn(Popsize, Dim)\n",
     "        alpha = rand() * ((1 / Maxiteration^2) * t^2 - 2 / Maxiteration * t + 1)  # eq.(8) in this paper\n",
-    "        # a = 1 / (Maxiteration^2 - 2 * Maxiteration + 1)  # Note: U can use positive or negative on 1 for solving ur problem.\n",
-    "        # b = -2a\n",
-    "        # c = 1 - a - b\n",
+    "        a = 1 / (Maxiteration^2 - 2 * Maxiteration + 1)  # Note: U can use positive or negative on 1 for solving ur problem.\n",
+    "        b = -2a\n",
+    "        c = 1 - a - b\n",
     "        k = 1 - rand() * (c + a * t^2 + b * t)  # eq.(11) in this paper\n",
     "        if randn() < 1.5\n",
     "            for i in 1:Popsize\n",
@@ -2382,11 +2402,11 @@
     "        ## Landing stage\n",
     "        if levy_single(1.5) > 0\n",
     "        \tfor i in 1:Popsize\n",
-    "        \t\tdandelion[i], dandelionsFitness[i] = two_opt_tsp(d, dandelion[i])\n",
+    "        \t\tdandelions[i], dandelionsFitness[i] = two_opt_tsp(d, dandelions[i])\n",
     "        \tend\n",
     "        else\n",
     "        \tfor i in 1:Popsize\n",
-    "        \t\tdandelion[i], dandelionsFitness[i] = three_opt_tsp(d, dandelion[i])\n",
+    "        \t\tdandelions[i], dandelionsFitness[i] = three_opt_tsp(d, dandelions[i])\n",
     "        \tend\n",
     "        end\n",
     "\n",
@@ -2416,6 +2436,66 @@
     "    total_time = end_time - start_time\n",
     "    return Best_fitness, Best_position, Convergence_curve, total_time\n",
     "end\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "draw_tsp (generic function with 3 methods)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "function draw_tsp(x,o,n,size=1000,radius=5)\n",
+    "    Drawing(size, size, \"TSP.png\")\n",
+    "    stretch=Int64(0.9size)\n",
+    "    origin(Int64(0.05size),Int64(0.05size))\n",
+    "    # draw cities\n",
+    "    for i in 1:n\n",
+    "        A=Point(stretch*x[1,i],stretch*x[2,i])\n",
+    "        circle(A, radius, :fill)\n",
+    "        label(\"city $i\", :S, A)\n",
+    "    end\n",
+    "    # connect cities by edges\n",
+    "    for i in 1:n-1\n",
+    "        A=Point(stretch*x[1,o[i]],stretch*x[2,o[i]])\n",
+    "        B=Point(stretch*x[1,o[i+1]],stretch*x[2,o[i+1]])\n",
+    "        line(A, B, :stroke)\n",
+    "    end\n",
+    "    # return to first city\n",
+    "    A=Point(stretch*x[1,o[n]],stretch*x[2,o[n]])\n",
+    "    B=Point(stretch*x[1,o[1]],stretch*x[2,o[1]])\n",
+    "    line(A, B, :stroke)\n",
+    "    finish()\n",
+    "    preview()\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3.228032062582319, Any[[4, 8, 3, 5, 2, 9, 6, 1, 10, 7]], [5.508516925967245, 3.228032062582319, 3.228032062582319, 3.228032062582319, 3.228032062582319, 3.228032062582319, 3.228032062582319, 3.228032062582319, 3.228032062582319, 3.228032062582319  …  3.228032062582319, 3.228032062582319, 3.228032062582319, 3.228032062582319, 3.228032062582319, 3.228032062582319, 3.228032062582319, 3.228032062582319, 3.228032062582319, 3.228032062582319], 0.09399986267089844)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "best_fitness, best_tour, convergence_curve, total_time = DO_tsp(20, 100, 10, 10)"
    ]
   }
  ],
