--- a/DandelionOptimizer.ipynb
+++ b/DandelionOptimizer.ipynb
@@ -44,12 +44,13 @@
     "import Pkg; \n",
     "Pkg.add(\"SpecialFunctions\")\n",
     "Pkg.add(\"BenchmarkFunctions\")\n",
-    "Pkg.add(\"HardTestProblems\")"
+    "Pkg.add(\"HardTestProblems\")\n",
+    "Pkd.add(\"DataFrames\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2135,7 +2136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2144,8 +2145,9 @@
        "tour_cost (generic function with 1 method)"
       ]
      },
+     "execution_count": 32,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2162,7 +2164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2171,8 +2173,9 @@
        "two_opt_tsp (generic function with 1 method)"
       ]
      },
+     "execution_count": 33,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2216,7 +2219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2225,8 +2228,9 @@
        "three_opt_tsp (generic function with 1 method)"
       ]
      },
+     "execution_count": 34,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2276,8 +2280,9 @@
        "levy_single (generic function with 1 method)"
       ]
      },
+     "execution_count": 35,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2295,7 +2300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2304,8 +2309,9 @@
        "initialization_tsp (generic function with 1 method)"
       ]
      },
+     "execution_count": 36,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2326,25 +2332,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DO_tsp (generic function with 1 method)"
+       "DO_tsp (generic function with 2 methods)"
       ]
      },
+     "execution_count": 41,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "function DO_tsp(Popsize, Maxiteration, Dim, cities)\n",
+    "function DO_tsp(Popsize, Maxiteration, cities)\n",
     "    start_time = time()\n",
     "\tcoordinates = rand(2,cities) \n",
     "    d=pairwise(Euclidean(), coordinates, dims=2)\n",
-    "    dandelions, dandelionsFitness = initialization_tsp(cities, d, Popsize, Dim)\n",
+    "    dandelions, dandelionsFitness = initialization_tsp(coordinates, d, Popsize, cities)\n",
     "    Convergence_curve = zeros(Maxiteration)\n",
     "\n",
     "    # Calculate the fitness values of initial dandelions.\n",
@@ -2359,7 +2366,7 @@
     "        # dandelions_1 = zeros(Popsize, Dim)\n",
     "\n",
     "        ## Rising stage\n",
-    "        beta = randn(Popsize, Dim)\n",
+    "        beta = randn(Popsize, cities)\n",
     "        alpha = rand() * ((1 / Maxiteration^2) * t^2 - 2 / Maxiteration * t + 1)  # eq.(8) in this paper\n",
     "        a = 1 / (Maxiteration^2 - 2 * Maxiteration + 1)  # Note: U can use positive or negative on 1 for solving ur problem.\n",
     "        b = -2a\n",
@@ -2387,7 +2394,7 @@
     "        # dandelions_mean = sum(dandelions, dims=1) / Popsize  # eq.(14) in this paper\n",
     "        # dandelions_2 = similar(dandelions)  # Preallocate dandelions_2 array\n",
     "        for i in 1:Popsize\n",
-    "            for j in 1:Dim\n",
+    "            for j in 1:cities\n",
     "\t\t\t\tif abs(alpha * beta[i, j]) > 1.5\n",
     "\t\t\t\t\tx, y = rand(1:length(dandelions[i])), rand(1:length(dandelions[i]))\n",
     "\t\t\t\t\tdandelions[x], dandelions[y] = dandelions[y], dandelions[x]\n",
@@ -2440,7 +2447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -2449,8 +2456,9 @@
        "draw_tsp (generic function with 3 methods)"
       ]
      },
+     "execution_count": 42,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2481,22 +2489,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3.228032062582319, Any[[4, 8, 3, 5, 2, 9, 6, 1, 10, 7]], [5.508516925967245, 3.228032062582319, 3.228032062582319, 3.228032062582319, 3.228032062582319, 3.228032062582319, 3.228032062582319, 3.228032062582319, 3.228032062582319, 3.228032062582319  …  3.228032062582319, 3.228032062582319, 3.228032062582319, 3.228032062582319, 3.228032062582319, 3.228032062582319, 3.228032062582319, 3.228032062582319, 3.228032062582319, 3.228032062582319], 0.09399986267089844)"
+       "(2.913241267678412, Any[[1, 9, 3, 6, 4, 2, 5, 7, 10, 8]], [3.9397306420062734, 2.913241267678412, 2.913241267678412, 2.913241267678412, 2.913241267678412, 2.913241267678412, 2.913241267678412, 2.913241267678412, 2.913241267678412, 2.913241267678412  …  2.913241267678412, 2.913241267678412, 2.913241267678412, 2.913241267678412, 2.913241267678412, 2.913241267678412, 2.913241267678412, 2.913241267678412, 2.913241267678412, 2.913241267678412], 0.564000129699707)"
       ]
      },
+     "execution_count": 44,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "best_fitness, best_tour, convergence_curve, total_time = DO_tsp(20, 100, 10, 10)"
+    "best_fitness, best_tour, convergence_curve, total_time = DO_tsp(20, 100, 10)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
