--- a/DandelionOptimizer.ipynb
+++ b/DandelionOptimizer.ipynb
@@ -2332,7 +2332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -2341,15 +2341,14 @@
        "DO_tsp (generic function with 2 methods)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "function DO_tsp(Popsize, Maxiteration, cities)\n",
-    "    start_time = time()\n",
-    "\tcoordinates = rand(2,cities) \n",
+    "function DO_tsp(Popsize, Maxiteration, cities, coordinates)\n",
+    "    start_time = time() \n",
     "    d=pairwise(Euclidean(), coordinates, dims=2)\n",
     "    dandelions, dandelionsFitness = initialization_tsp(coordinates, d, Popsize, cities)\n",
     "    Convergence_curve = zeros(Maxiteration)\n",
@@ -2447,7 +2446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -2456,7 +2455,7 @@
        "draw_tsp (generic function with 3 methods)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2489,22 +2488,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2.913241267678412, Any[[1, 9, 3, 6, 4, 2, 5, 7, 10, 8]], [3.9397306420062734, 2.913241267678412, 2.913241267678412, 2.913241267678412, 2.913241267678412, 2.913241267678412, 2.913241267678412, 2.913241267678412, 2.913241267678412, 2.913241267678412  …  2.913241267678412, 2.913241267678412, 2.913241267678412, 2.913241267678412, 2.913241267678412, 2.913241267678412, 2.913241267678412, 2.913241267678412, 2.913241267678412, 2.913241267678412], 0.564000129699707)"
+       "(3.800185943738318, Any[[8, 2, 17, 9, 11, 19, 14, 12, 7, 4, 1, 3, 20, 15, 16, 10, 5, 18, 6, 13]], [8.473111814369707, 3.800185943738318, 3.800185943738318, 3.800185943738318, 3.800185943738318, 3.800185943738318, 3.800185943738318, 3.800185943738318, 3.800185943738318, 3.800185943738318  …  3.800185943738318, 3.800185943738318, 3.800185943738318, 3.800185943738318, 3.800185943738318, 3.800185943738318, 3.800185943738318, 3.800185943738318, 3.800185943738318, 3.800185943738318], 2.4839999675750732)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "best_fitness, best_tour, convergence_curve, total_time = DO_tsp(20, 100, 10)"
+    "n = 20\n",
+    "coordinates = rand(2,n)\n",
+    "best_fitness, best_tour, convergence_curve, total_time = DO_tsp(20, 100, n, coordinates)"
    ]
   },
   {
