Improved speed of program slightly

--- a/DandelionOptimizer.ipynb
+++ b/DandelionOptimizer.ipynb
@@ -2149,8 +2149,9 @@
        "tour_cost (generic function with 1 method)"
       ]
      },
+     "execution_count": 2,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2176,8 +2177,9 @@
        "match_twice_and_stitch (generic function with 1 method)"
       ]
      },
+     "execution_count": 3,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2264,8 +2266,9 @@
        "three_opt_tsp (generic function with 1 method)"
       ]
      },
+     "execution_count": 4,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2315,8 +2318,9 @@
        "levy_single (generic function with 1 method)"
       ]
      },
+     "execution_count": 5,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2343,8 +2347,9 @@
        "initialization_tsp (generic function with 1 method)"
       ]
      },
+     "execution_count": 6,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2365,7 +2370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -2374,8 +2379,9 @@
        "DO_tsp (generic function with 1 method)"
       ]
      },
+     "execution_count": 145,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2404,19 +2410,16 @@
     "        k = 1 - rand() * (c + a * t^2 + b * t)  # eq.(11) in this paper\n",
     "        if randn() < 1.5\n",
     "            for i in 1:Popsize\n",
-    "\t\t\t\tsize = floor(Int, rand() * 0.2 * alpha * cities)\n",
+    "\t\t\t\tsize = floor(Int, rand() * 0.5 * alpha * cities)\n",
     "\t\t\t\tstart_index = rand(1:length(dandelions[i])-size+1)\n",
     "\t\t\t\tsubarray = dandelions[i][start_index:start_index+size-1]\n",
     "\t\t\t\tshuffled_subarray = shuffle(subarray)\n",
     "\t\t\t\tdandelions[i][start_index:start_index+size-1] .= shuffled_subarray\n",
+    "                dandelionsFitness[i] = tour_cost(d, dandelions[i])\n",
     "            end\n",
     "        else\n",
     "            for i in 1:Popsize\n",
-    "                if k <= 0.5\n",
-    "\t\t\t\t\tdandelions[i], dandelionsFitness[i] = three_opt_tsp(d, dandelions[i])\n",
-    "                else\n",
-    "                    dandelions[i], dandelionsFitness[i] = two_opt_tsp(d, dandelions[i])\n",
-    "                end\n",
+    "                dandelions[i], dandelionsFitness[i] = two_opt_tsp(d, dandelions[i])\n",
     "            end\n",
     "        end\n",
     "\n",
@@ -2489,8 +2492,9 @@
        "draw_tsp (generic function with 3 methods)"
       ]
      },
+     "execution_count": 8,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2521,7 +2525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2543,11 +2547,12 @@
     {
      "data": {
       "text/plain": [
-       "(8.10617631493061, Any[[29, 91, 54, 3, 92, 14, 87, 60, 37, 53  …  13, 43, 6, 19, 61, 32, 81, 59, 15, 69]], [47.931587804155825, 47.931587804155825, 47.520681397134716, 8.10617631493061, 8.10617631493061, 8.10617631493061, 8.10617631493061, 8.10617631493061, 8.10617631493061, 8.10617631493061  …  8.10617631493061, 8.10617631493061, 8.10617631493061, 8.10617631493061, 8.10617631493061, 8.10617631493061, 8.10617631493061, 8.10617631493061, 8.10617631493061, 8.10617631493061], 58.57799983024597)"
+       "(8.11487319906802, Any[[63, 34, 92, 17, 98, 93, 54, 28, 41, 97  …  3, 22, 71, 21, 70, 35, 88, 62, 8, 87]], [48.188805212596236, 48.188805212596236, 48.188805212596236, 48.188805212596236, 8.378978033081841, 8.11487319906802, 8.11487319906802, 8.11487319906802, 8.11487319906802, 8.11487319906802  …  8.11487319906802, 8.11487319906802, 8.11487319906802, 8.11487319906802, 8.11487319906802, 8.11487319906802, 8.11487319906802, 8.11487319906802, 8.11487319906802, 8.11487319906802], 9.784000158309937)"
       ]
      },
+     "execution_count": 9,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2577,7 +2582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -2586,8 +2591,9 @@
        "TSP(\"berlin52\", 52, \"EUC_2D\", [0.0 666.0 … 789.0 1220.0; 666.0 0.0 … 1422.0 1716.0; … ; 789.0 1422.0 … 0.0 625.0; 1220.0 1716.0 … 625.0 0.0], [565.0 575.0; 25.0 185.0; … ; 1340.0 725.0; 1740.0 245.0], false, TSPLIB.var\"#fFit#19\"{Matrix{Float64}, Int64}([0.0 666.0 … 789.0 1220.0; 666.0 0.0 … 1422.0 1716.0; … ; 789.0 1422.0 … 0.0 625.0; 1220.0 1716.0 … 625.0 0.0], 52), TSPLIB.var\"#pFit#20\"{Matrix{Float64}, Int64}([0.0 666.0 … 789.0 1220.0; 666.0 0.0 … 1422.0 1716.0; … ; 789.0 1422.0 … 0.0 625.0; 1220.0 1716.0 … 625.0 0.0], 52), 7542.0)"
       ]
      },
+     "execution_count": 118,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2596,7 +2602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -2605,8 +2611,9 @@
        "7542.0"
       ]
      },
+     "execution_count": 119,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2615,7 +2622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -2637,11 +2644,12 @@
     {
      "data": {
       "text/plain": [
-       "(7542.0, Any[[12, 25, 4, 6, 15, 5, 24, 48, 38, 37  …  33, 51, 11, 52, 14, 13, 47, 26, 27, 28]], [28193.0, 7949.0, 7949.0, 7949.0, 7949.0, 7949.0, 7949.0, 7949.0, 7949.0, 7949.0  …  7542.0, 7542.0, 7542.0, 7542.0, 7542.0, 7542.0, 7542.0, 7542.0, 7542.0, 7542.0], 2.7850000858306885)"
+       "(7048.0, Any[[79, 52, 33, 100, 58, 91, 93, 109, 23, 56  …  66, 31, 117, 85, 18, 19, 25, 108, 15, 43]], [49537.0, 7208.0, 7159.0, 7048.0, 7048.0, 7048.0, 7048.0, 7048.0, 7048.0, 7048.0  …  7048.0, 7048.0, 7048.0, 7048.0, 7048.0, 7048.0, 7048.0, 7048.0, 7048.0, 7048.0], 53.54400014877319)"
       ]
      },
+     "execution_count": 146,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2650,7 +2658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -2659,8 +2667,9 @@
        "TSP(\"gr120\", 120, \"EXPLICIT\", [0.0 534.0 … 369.0 121.0; 534.0 0.0 … 167.0 511.0; … ; 369.0 167.0 … 0.0 347.0; 121.0 511.0 … 347.0 0.0], [8.0 124.0; 125.0 80.0; … ; 84.0 91.0; 31.0 140.0], true, TSPLIB.var\"#fFit#19\"{LinearAlgebra.Adjoint{Float64, Matrix{Float64}}, Int64}([0.0 534.0 … 369.0 121.0; 534.0 0.0 … 167.0 511.0; … ; 369.0 167.0 … 0.0 347.0; 121.0 511.0 … 347.0 0.0], 120), TSPLIB.var\"#pFit#20\"{LinearAlgebra.Adjoint{Float64, Matrix{Float64}}, Int64}([0.0 534.0 … 369.0 121.0; 534.0 0.0 … 167.0 511.0; … ; 369.0 167.0 … 0.0 347.0; 121.0 511.0 … 347.0 0.0], 120), 6942.0)"
       ]
      },
+     "execution_count": 128,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2669,7 +2678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -2678,8 +2687,9 @@
        "6942.0"
       ]
      },
+     "execution_count": 129,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2688,7 +2698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -2710,11 +2720,12 @@
     {
      "data": {
       "text/plain": [
-       "(7077.0, Any[[68, 91, 58, 100, 33, 52, 79, 43, 108, 25  …  86, 75, 44, 50, 46, 20, 107, 113, 69, 65]], [48891.0, 7198.0, 7198.0, 7172.0, 7172.0, 7172.0, 7172.0, 7172.0, 7172.0, 7172.0  …  7077.0, 7077.0, 7077.0, 7077.0, 7077.0, 7077.0, 7077.0, 7077.0, 7077.0, 7077.0], 79.09599995613098)"
+       "(7032.0, Any[[13, 118, 20, 107, 113, 69, 65, 68, 91, 58  …  87, 14, 75, 44, 46, 50, 98, 42, 17, 49]], [47714.0, 7146.0, 7146.0, 7146.0, 7146.0, 7146.0, 7146.0, 7146.0, 7110.0, 7110.0  …  7032.0, 7032.0, 7032.0, 7032.0, 7032.0, 7032.0, 7032.0, 7032.0, 7032.0, 7032.0], 47.31599998474121)"
       ]
      },
+     "execution_count": 138,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
