Updated monte carlo

--- a/DandelionOptimizer.ipynb
+++ b/DandelionOptimizer.ipynb
@@ -2609,7 +2609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2618,7 +2618,7 @@
        "TSP(\"berlin52\", 52, \"EUC_2D\", [0.0 666.0 … 789.0 1220.0; 666.0 0.0 … 1422.0 1716.0; … ; 789.0 1422.0 … 0.0 625.0; 1220.0 1716.0 … 625.0 0.0], [565.0 575.0; 25.0 185.0; … ; 1340.0 725.0; 1740.0 245.0], false, TSPLIB.var\"#fFit#19\"{Matrix{Float64}, Int64}([0.0 666.0 … 789.0 1220.0; 666.0 0.0 … 1422.0 1716.0; … ; 789.0 1422.0 … 0.0 625.0; 1220.0 1716.0 … 625.0 0.0], 52), TSPLIB.var\"#pFit#20\"{Matrix{Float64}, Int64}([0.0 666.0 … 789.0 1220.0; 666.0 0.0 … 1422.0 1716.0; … ; 789.0 1422.0 … 0.0 625.0; 1220.0 1716.0 … 625.0 0.0], 52), 7542.0)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2629,7 +2629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2638,7 +2638,7 @@
        "7542.0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2649,16 +2649,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(7922.0, [20, 23, 30, 2, 7, 42, 21, 17, 3, 18  …  11, 52, 14, 13, 27, 28, 26, 47, 29, 50], [28069.0, 8468.0, 8468.0, 8468.0, 8468.0, 8468.0, 8468.0, 8468.0, 8468.0, 8468.0  …  7922.0, 7922.0, 7922.0, 7922.0, 7922.0, 7922.0, 7922.0, 7922.0, 7922.0, 7922.0], 0.3399999141693115)"
+       "(7542.0, [52, 14, 13, 47, 26, 27, 28, 12, 25, 4  …  45, 19, 41, 8, 9, 10, 43, 33, 51, 11], [27711.0, 7818.0, 7818.0, 7818.0, 7818.0, 7818.0, 7818.0, 7818.0, 7818.0, 7818.0  …  7542.0, 7542.0, 7542.0, 7542.0, 7542.0, 7542.0, 7542.0, 7542.0, 7542.0, 7542.0], 0.4679999351501465)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2734,24 +2734,8 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div><div style = \"float: left;\"><span>1×4 DataFrame</span></div><div style = \"clear: both;\"></div></div><div class = \"data-frame\" style = \"overflow-x: scroll;\"><table class = \"data-frame\" style = \"margin-bottom: 6px;\"><thead><tr class = \"header\"><th class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">Row</th><th style = \"text-align: left;\">TSP</th><th style = \"text-align: left;\">Average_Tour_Cost</th><th style = \"text-align: left;\">Optimal_Cost</th><th style = \"text-align: left;\">Average_Time</th></tr><tr class = \"subheader headerLastRow\"><th class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\"></th><th title = \"String\" style = \"text-align: left;\">String</th><th title = \"String\" style = \"text-align: left;\">String</th><th title = \"String\" style = \"text-align: left;\">String</th><th title = \"String\" style = \"text-align: left;\">String</th></tr></thead><tbody><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">1</td><td style = \"text-align: left;\">berlin52</td><td style = \"text-align: left;\">7.71e+03</td><td style = \"text-align: left;\">7542</td><td style = \"text-align: left;\">3.95e-01</td></tr></tbody></table></div>"
-      ],
-      "text/latex": [
-       "\\begin{tabular}{r|cccc}\n",
-       "\t& TSP & Average\\_Tour\\_Cost & Optimal\\_Cost & Average\\_Time\\\\\n",
-       "\t\\hline\n",
-       "\t& String & String & String & String\\\\\n",
-       "\t\\hline\n",
-       "\t1 & berlin52 & 7.71e+03 & 7542 & 3.95e-01 \\\\\n",
-       "\\end{tabular}\n"
-      ],
       "text/plain": [
-       "\u001b[1m1×4 DataFrame\u001b[0m\n",
-       "\u001b[1m Row \u001b[0m│\u001b[1m TSP      \u001b[0m\u001b[1m Average_Tour_Cost \u001b[0m\u001b[1m Optimal_Cost \u001b[0m\u001b[1m Average_Time \u001b[0m\n",
-       "     │\u001b[90m String   \u001b[0m\u001b[90m String            \u001b[0m\u001b[90m String       \u001b[0m\u001b[90m String       \u001b[0m\n",
-       "─────┼─────────────────────────────────────────────────────────\n",
-       "   1 │ berlin52  7.71e+03           7542          3.95e-01"
+       "monte_carlo (generic function with 1 method)"
       ]
      },
      "execution_count": 10,
@@ -2760,145 +2744,51 @@
     }
    ],
    "source": [
-    "monte_simulation = 20\n",
+    "function monte_carlo(tsp, dandelion_count, iterations, simulations)\n",
+    "    avg_time = 0\n",
     "\n",
-    "results_df_tsp = DataFrame(TSP=String[], Average_Tour_Cost=String[], Optimal_Cost=String[], Average_Time=String[])\n",
+    "    ovr_best_cost = floatmax(Float64)\n",
+    "    ovr_worst_cost = 0\n",
     "\n",
-    "avg_fitness = 0\n",
-    "avg_time = 0\n",
+    "    cost_list = zeros(simulations)\n",
     "\n",
-    "tsp = readTSPLIB(:berlin52)\n",
+    "    for i in 1:simulations\n",
+    "        best_cost, best_tour, convergence_curve, total_time = DO_tsp(dandelion_count, iterations, tsp.dimension, tsp.nodes, tsp.weights)\n",
+    "        cost_list[i] = best_cost\n",
+    "        avg_time += total_time/simulations\n",
     "\n",
-    "for i in 1:monte_simulation\n",
-    "    best_fitness, best_tour, convergence_curve, total_time = DO_tsp(20, 100, tsp.dimension, tsp.nodes, tsp.weights)\n",
-    "    avg_fitness += best_fitness/monte_simulation\n",
-    "    avg_time += total_time/monte_simulation\n",
-    "end\n",
+    "        if best_cost < ovr_best_cost\n",
+    "            ovr_best_cost = best_cost\n",
+    "        end\n",
+    "        if best_cost > ovr_worst_cost\n",
+    "            ovr_worst_cost = best_cost\n",
+    "        end\n",
+    "    end\n",
     "\n",
-    "push!(results_df_tsp, [\"berlin52\", @sprintf(\"%.2e\", avg_fitness), @sprintf(\"%i\", tsp.optimal), @sprintf(\"%.2e\", avg_time)])"
+    "    average = mean(cost_list)\n",
+    "    sd = std(cost_list)\n",
+    "    middle = median(cost_list)\n",
+    "\n",
+    "    return ovr_best_cost, ovr_worst_cost, average, middle, sd, avg_time\n",
+    "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div><div style = \"float: left;\"><span>2×4 DataFrame</span></div><div style = \"clear: both;\"></div></div><div class = \"data-frame\" style = \"overflow-x: scroll;\"><table class = \"data-frame\" style = \"margin-bottom: 6px;\"><thead><tr class = \"header\"><th class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">Row</th><th style = \"text-align: left;\">TSP</th><th style = \"text-align: left;\">Average_Tour_Cost</th><th style = \"text-align: left;\">Optimal_Cost</th><th style = \"text-align: left;\">Average_Time</th></tr><tr class = \"subheader headerLastRow\"><th class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\"></th><th title = \"String\" style = \"text-align: left;\">String</th><th title = \"String\" style = \"text-align: left;\">String</th><th title = \"String\" style = \"text-align: left;\">String</th><th title = \"String\" style = \"text-align: left;\">String</th></tr></thead><tbody><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">1</td><td style = \"text-align: left;\">berlin52</td><td style = \"text-align: left;\">7.71e+03</td><td style = \"text-align: left;\">7542</td><td style = \"text-align: left;\">3.95e-01</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">2</td><td style = \"text-align: left;\">gr120</td><td style = \"text-align: left;\">7.11e+03</td><td style = \"text-align: left;\">6942</td><td style = \"text-align: left;\">1.49e+01</td></tr></tbody></table></div>"
-      ],
-      "text/latex": [
-       "\\begin{tabular}{r|cccc}\n",
-       "\t& TSP & Average\\_Tour\\_Cost & Optimal\\_Cost & Average\\_Time\\\\\n",
-       "\t\\hline\n",
-       "\t& String & String & String & String\\\\\n",
-       "\t\\hline\n",
-       "\t1 & berlin52 & 7.71e+03 & 7542 & 3.95e-01 \\\\\n",
-       "\t2 & gr120 & 7.11e+03 & 6942 & 1.49e+01 \\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/plain": [
-       "\u001b[1m2×4 DataFrame\u001b[0m\n",
-       "\u001b[1m Row \u001b[0m│\u001b[1m TSP      \u001b[0m\u001b[1m Average_Tour_Cost \u001b[0m\u001b[1m Optimal_Cost \u001b[0m\u001b[1m Average_Time \u001b[0m\n",
-       "     │\u001b[90m String   \u001b[0m\u001b[90m String            \u001b[0m\u001b[90m String       \u001b[0m\u001b[90m String       \u001b[0m\n",
-       "─────┼─────────────────────────────────────────────────────────\n",
-       "   1 │ berlin52  7.71e+03           7542          3.95e-01\n",
-       "   2 │ gr120     7.11e+03           6942          1.49e+01"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "avg_fitness = 0\n",
-    "avg_time = 0\n",
-    "\n",
-    "tsp = readTSPLIB(:gr120)\n",
-    "\n",
-    "for i in 1:monte_simulation\n",
-    "    best_fitness, best_tour, convergence_curve, total_time = DO_tsp(20, 100, tsp.dimension, tsp.nodes, tsp.weights)\n",
-    "    avg_fitness += best_fitness/monte_simulation\n",
-    "    avg_time += total_time/monte_simulation\n",
+    "tsp_list = [:gr17 :bays29 :swiss42 :eil51 :berlin52 :st70 :eil76 :rat99 :kroA100 :kroC100 :kroE100 :eil101 :lin105 :pr107 :pr124 :bier127 :pr136 :pr144 :pr152]\n",
+    "df_tsp = DataFrame(TSP=String[], Optimal=String[], Best=String[], Worst=String[], Avg=String[], Median=String[], Std=String[], PDavg=String[], PDbest=String[], Time=String[])\n",
+    "for item in tsp_list\n",
+    "    curr_tsp = readTSPLIB(item)\n",
+    "    best, worst, average, middle, sd, time = monte_carlo(curr_tsp, 50, 100, 20)\n",
+    "    pdavg = (average - curr_tsp.optimal)*100/curr_tsp.optimal\n",
+    "    pdbest = (best - curr_tsp.optimal)*100/curr_tsp.optimal\n",
+    "    push!(df_tsp, [curr_tsp.name, @sprintf(\"%i\", curr_tsp.optimal), @sprintf(\"%.2f\", best), @sprintf(\"%.2f\", worst), @sprintf(\"%.2f\", average), @sprintf(\"%.2f\", middle), @sprintf(\"%.2f\", sd), @sprintf(\"%.2f\", pdavg), @sprintf(\"%.2f\", pdbest), @sprintf(\"%.2f\", time)])\n",
     "end\n",
-    "\n",
-    "push!(results_df_tsp, [\"gr120\", @sprintf(\"%.2e\", avg_fitness), @sprintf(\"%i\", tsp.optimal), @sprintf(\"%.2e\", avg_time)])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div><div style = \"float: left;\"><span>3×4 DataFrame</span></div><div style = \"clear: both;\"></div></div><div class = \"data-frame\" style = \"overflow-x: scroll;\"><table class = \"data-frame\" style = \"margin-bottom: 6px;\"><thead><tr class = \"header\"><th class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">Row</th><th style = \"text-align: left;\">TSP</th><th style = \"text-align: left;\">Average_Tour_Cost</th><th style = \"text-align: left;\">Optimal_Cost</th><th style = \"text-align: left;\">Average_Time</th></tr><tr class = \"subheader headerLastRow\"><th class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\"></th><th title = \"String\" style = \"text-align: left;\">String</th><th title = \"String\" style = \"text-align: left;\">String</th><th title = \"String\" style = \"text-align: left;\">String</th><th title = \"String\" style = \"text-align: left;\">String</th></tr></thead><tbody><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">1</td><td style = \"text-align: left;\">berlin52</td><td style = \"text-align: left;\">7.71e+03</td><td style = \"text-align: left;\">7542</td><td style = \"text-align: left;\">3.95e-01</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">2</td><td style = \"text-align: left;\">gr120</td><td style = \"text-align: left;\">7.11e+03</td><td style = \"text-align: left;\">6942</td><td style = \"text-align: left;\">1.49e+01</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">3</td><td style = \"text-align: left;\">pr152</td><td style = \"text-align: left;\">7.47e+04</td><td style = \"text-align: left;\">73682</td><td style = \"text-align: left;\">3.12e+01</td></tr></tbody></table></div>"
-      ],
-      "text/latex": [
-       "\\begin{tabular}{r|cccc}\n",
-       "\t& TSP & Average\\_Tour\\_Cost & Optimal\\_Cost & Average\\_Time\\\\\n",
-       "\t\\hline\n",
-       "\t& String & String & String & String\\\\\n",
-       "\t\\hline\n",
-       "\t1 & berlin52 & 7.71e+03 & 7542 & 3.95e-01 \\\\\n",
-       "\t2 & gr120 & 7.11e+03 & 6942 & 1.49e+01 \\\\\n",
-       "\t3 & pr152 & 7.47e+04 & 73682 & 3.12e+01 \\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/plain": [
-       "\u001b[1m3×4 DataFrame\u001b[0m\n",
-       "\u001b[1m Row \u001b[0m│\u001b[1m TSP      \u001b[0m\u001b[1m Average_Tour_Cost \u001b[0m\u001b[1m Optimal_Cost \u001b[0m\u001b[1m Average_Time \u001b[0m\n",
-       "     │\u001b[90m String   \u001b[0m\u001b[90m String            \u001b[0m\u001b[90m String       \u001b[0m\u001b[90m String       \u001b[0m\n",
-       "─────┼─────────────────────────────────────────────────────────\n",
-       "   1 │ berlin52  7.71e+03           7542          3.95e-01\n",
-       "   2 │ gr120     7.11e+03           6942          1.49e+01\n",
-       "   3 │ pr152     7.47e+04           73682         3.12e+01"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "avg_fitness = 0\n",
-    "avg_time = 0\n",
-    "\n",
-    "tsp = readTSPLIB(:pr152)\n",
-    "\n",
-    "for i in 1:monte_simulation\n",
-    "    best_fitness, best_tour, convergence_curve, total_time = DO_tsp(20, 100, tsp.dimension, tsp.nodes, tsp.weights)\n",
-    "    avg_fitness += best_fitness/monte_simulation\n",
-    "    avg_time += total_time/monte_simulation\n",
-    "end\n",
-    "\n",
-    "push!(results_df_tsp, [\"pr152\", @sprintf(\"%.2e\", avg_fitness), @sprintf(\"%i\", tsp.optimal), @sprintf(\"%.2e\", avg_time)])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m3×4 DataFrame\u001b[0m\n",
-      "\u001b[1m Row \u001b[0m│\u001b[1m TSP      \u001b[0m\u001b[1m Average_Tour_Cost \u001b[0m\u001b[1m Optimal_Cost \u001b[0m\u001b[1m Average_Time \u001b[0m\n",
-      "     │\u001b[90m String   \u001b[0m\u001b[90m String            \u001b[0m\u001b[90m String       \u001b[0m\u001b[90m String       \u001b[0m\n",
-      "─────┼─────────────────────────────────────────────────────────\n",
-      "   1 │ berlin52  7.71e+03           7542          3.95e-01\n",
-      "   2 │ gr120     7.11e+03           6942          1.49e+01\n",
-      "   3 │ pr152     7.47e+04           73682         3.12e+01\n"
-     ]
-    }
-   ],
-   "source": [
-    "println(results_df_tsp)"
+    "println(df_tsp)"
    ]
   },
   {
